# Firefly

./: .gitignore  LICENSE  README.md  app.html  index.html  package-lock.json  package.json  playwright.config.js  server.js
.github/workflows/: desktop-build.yml  visual-regression.yml
scripts/: build-web-assets.js  make-windows-icon.js  update-hardware-catalog.js
src/: app.js  benchmarkEngine.js  capabilities.js  catalogAdapters.js  comparison.js  docs.js  hardwareCatalog.generated.js  hardwareProbe.js  historyStore.js  model.js  pdfReport.js  productClarity.js  styles.css  systemDesigner.js  theoreticalMax.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  native_helpers.rs
tests/: benchmarkEngine.test.js  catalogAdapters.test.js  comparison.test.js  edge-cases.test.js  hardwareProbe.test.js  model.test.js  pdfReport.test.js  systemDesigner.test.js
tests/visual/: firefly.visual.spec.js
