[package]
name = "firefly"
version = "1.0.0"
description = "Deterministic system-path diagnostics for expected vs observed performance."
authors = ["Firefly"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "firefly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
